# FastAPILibraryProject

./: .env.example  README.md  conftest.py  entrypoint.sh  manage_db.py  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh
app/: config.py  main.py
app/admin/: auth.py  index.py
app/crud/: authors.py  book.py  books.py  genres.py  users.py
app/crud/shared/: db_utils.py
app/models/: __init__.py  author.py  book.py  book_author.py  book_author_association.py  book_genre.py  genre.py  user.py
app/routers/: authors.py  books.py  genres.py  sessions.py
app/schemas/: author.py  base.py  book.py  genre.py  pagination.py  user.py
app/services/: authorization.py  pagination.py  search.py  sorting.py
migrations/: env.py  seeds.py
migrations/versions/: 21fced3c8ca2_many_to_many_between_books_and_authors.py  241d74dd2ee9_initial_migration.py  ad9eedb33ba9_added_authors.py  db1152cd6b54_added_users.py  e431d9951b4e_many_to_many_between_books_and_authors.py  e9635d85c109_initial_migration.py  ff15c1991777_added_genres_and_book_genre.py
tests/: conftest.py
tests/crud/: test_authors.py  test_books.py  test_genres.py  test_users.py
tests/models/: test_author.py  test_book.py  test_book_author.py  test_book_genre.py  test_genre.py  test_user.py
tests/routers/: test_authors.py  test_books.py  test_genres.py  test_sessions.py
tests/schemas/: test_author.py  test_book.py  test_genre.py  test_pagination.py  test_token.py  test_user.py
tests/services/: test_pagination.py  test_response_templates.py  test_search.py  test_sorting.py
(+31 files in other folders)
