[project]
name = "fastapilibraryproject"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.6,<0.116.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "sqlalchemy-utils (>=0.41.2,<0.42.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "alembic (>=1.14.0,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-randomly = "^3.16.0"
httpx = "^0.28.1"
faker = "^37.1.0"
